--- a/eshop/src/index.css
+++ b/eshop/src/index.css
@@ -16,17 +16,16 @@
 
 a {
   font-weight: 500;
-  color: #646cff;
+  color: #111112;
   text-decoration: inherit;
 }
 a:hover {
-  color: #535bf2;
+  color: #767683;
 }
 
 body {
-  margin: 0;
+  margin: 0 auto;
   display: flex;
-  place-items: center;
   min-width: 320px;
   min-height: 100vh;
 }
@@ -34,6 +33,7 @@ body {
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
+  
 }
 
 button {
