--- a/eshop/src/App.css
+++ b/eshop/src/App.css
@@ -1,10 +1,12 @@
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+  max-width: 100%;
+  
+  
   text-align: center;
 }
-
+html{
+  height: 100%;
+}
 .logo {
   height: 6em;
   padding: 1.5em;
@@ -39,4 +41,13 @@
 
 .read-the-docs {
   color: #888;
+}
+.dark {
+  background-color: #333;
+  color: #fff;
+}
+
+.light {
+  background-color: #fff;
+  color: #333;
 }
